--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -25,6 +25,7 @@
 
 .todo {
   margin-top: 32px;
+  margin-bottom: 80px;
 }
 
 .todo__inner {
@@ -83,6 +84,10 @@
   height: 72px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
+}
+.todo__item:last-child {
+  margin-bottom: 0;
 }
 
 .todo__item-complete {
