--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -166,7 +166,14 @@
 
 .todo__toolse {
   display: flex;
+  flex-direction: column;
+  gap: 20px;
   margin-bottom: 24px;
+}
+
+.todo__toolse-wrap {
+  display: flex;
+  gap: 20px;
 }
 
 .todo__btn-removeLast {
@@ -180,13 +187,30 @@
   background: rgba(30, 215, 96, 0.71);
   border-radius: 500px;
   padding: 8px 20px 9px;
-  margin-left: 12px;
   font-size: 16px;
+}
+
+.todo__btn-red {
+  background-color: #ff2a2ad3;
+}
+
+.todo__btn-blue {
+  background-color: #3d5afdd5;
 }
 
 .completed {
   opacity: 0.5;
   text-decoration: line-through;
+}
+
+.evenStyle {
+  border-left: 2px solid #ff2a2a;
+  border-right: 2px solid #ff2a2a;
+}
+
+.oddStyle {
+  border-left: 2px solid #3d5afd;
+  border-right: 2px solid #3d5afd;
 }
 
 @media (max-width: 420px) {
